5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3135/executions/1752_1521.log
== TEST (2019-05-16 16:23:14) 
-- CODE:
N= int(input("Insira a capacidade do navio:"))
e= int(input("Insira o estoque inicial de containers:"))
Q= int(input("Insira a quantidade Q de containers que chegam ao deposito:"))

q=e
semanas=0

while(e>0):
	q=q-n+Q
	semana=+1
	
print(semana)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    q=q-n+Q
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:23:26) 
-- CODE:
N= int(input("Insira a capacidade do navio:"))
e= int(input("Insira o estoque inicial de containers:"))
Q= int(input("Insira a quantidade Q de containers que chegam ao deposito:"))

q=e
semanas=0

while(e>0):
	q=q-N+Q
	semana=+1
	
print(semana)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    q=q-n+Q
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:23:46) 
-- CODE:
N= int(input("Insira a capacidade do navio:"))
e= int(input("Insira o estoque inicial de containers:"))
Q= int(input("Insira a quantidade Q de containers que chegam ao deposito:"))

q=e
semanas=0

while(e>0):
	q=q-N+Q
	semana=+1
	
print(semana)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    q=q-n+Q
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:24:05) 
-- CODE:
N= int(input("Insira a capacidade do navio:"))
e= int(input("Insira o estoque inicial de containers:"))
Q= int(input("Insira a quantidade Q de containers que chegam ao deposito:"))

q=e
semanas=0

while(q>0):
	q=q-N+Q
	semana=+1
	
print(semana)

-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:24:13) 
-- CODE:
N= int(input("Insira a capacidade do navio:"))
e= int(input("Insira o estoque inicial de containers:"))
Q= int(input("Insira a quantidade Q de containers que chegam ao deposito:"))

q=e
semanas=0

while(q>0):
	q=q-N+Q
	semana=+1
	
print(semana)

-- EXECUTION TIME:
0.21616
-- TEST CASE 1:
---- input:
40
60
20
---- correct output:
3
---- user output:
1
-- TEST CASE 2:
---- input:
2
100
1
---- correct output:
100
---- user output:
1
-- TEST CASE 3:
---- input:
10
50
9
---- correct output:
50
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:24:23) 
-- CODE:
N= int(input("Insira a capacidade do navio:"))
e= int(input("Insira o estoque inicial de containers:"))
Q= int(input("Insira a quantidade Q de containers que chegam ao deposito:"))

q=e
semanas=0

while(q>0):
	q=q-N+Q
	semana=+1
	
print(semana)

-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:24:35) 
-- CODE:
N= int(input("Insira a capacidade do navio:"))
e= int(input("Insira o estoque inicial de containers:"))
Q= int(input("Insira a quantidade Q de containers que chegam ao deposito:"))

q=e
semanas=0

while(q>0):
	q=q-N+Q
	semana=+1
	
print(semana)

-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:25:07) 
-- CODE:
N= int(input("Insira a capacidade do navio:"))
e= int(input("Insira o estoque inicial de containers:"))
Q= int(input("Insira a quantidade Q de containers que chegam ao deposito:"))

q=e
semanas=0

while(q>0):
	q=q-N+Q
	
	semana=semana+1
print(semana)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    semana=semana+1
NameError: name 'semana' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:25:22) 
-- CODE:
N= int(input("Insira a capacidade do navio:"))
e= int(input("Insira o estoque inicial de containers:"))
Q= int(input("Insira a quantidade Q de containers que chegam ao deposito:"))

q=e
semanas=0

while(q>0):
	q=q-N+Q
	
	semanas=semanas+1
print(semanas)

-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:25:32) 
-- CODE:
N= int(input("Insira a capacidade do navio:"))
e= int(input("Insira o estoque inicial de containers:"))
Q= int(input("Insira a quantidade Q de containers que chegam ao deposito:"))

q=e
semanas=0

while(q>0):
	q=q-N+Q
	
	semanas=semanas+1
print(semanas)

-- EXECUTION TIME:
0.197075
-- TEST CASE 1:
---- input:
40
60
20
---- correct output:
3
---- user output:
3
-- TEST CASE 2:
---- input:
2
100
1
---- correct output:
100
---- user output:
100
-- TEST CASE 3:
---- input:
10
50
9
---- correct output:
50
---- user output:
50
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
